# feast-fare-price-prediction

./: .gitignore  .pre-commit-config.yaml  .template.env  README.md  docker-compose.yaml  feature_store.yaml  main.py  pyproject.toml
aggregation/: location_hourly_features.py
ingestion/: load_csv_to_postgres.py
